# twine_to_json

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
twine_to_json/: __init__.py  config.py  main.py  schemas.py  twine_parser.py
