[tool.poetry]
name = "twine-to-json"
version = "0.3.8"
description = ""
authors = ["vaclav-v"]
readme = "README.md"
packages = [{include = "twine_to_json"}]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
bs4 = "^0.0.1"
lxml = "^5.0.0"
pydantic = "^2.5.3"
regex = "^2023.12.25"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
